<resources>
    <string name="app_name">TP2_GRUPO04</string>
    <string name="edit_mail">Mail</string>
    <string name="edit_password">Contraseña</string>
    <string name="button_login">Iniciar Sesión</string>
    <string name="button_send">Enviar</string>
    <string name="button_register">Registrarse</string>
    <string name="button_cancel">Cancelar</string>
    <string name="edit_register_name">Nombre</string>
    <string name="edit_register_lastname">Apellido</string>
    <string name="edit_register_dni">DNI</string>
    <string name="edit_register_commission">Comisión</string>
    <string name="edit_register_group">Grupo</string>
    <string name="edit_auth_code">Código</string>
    <string name="button_auth_send_code">Volver a enviar</string>
    <string name="button_auth_cancel">Cancelar</string>
    <string name="button_auth_accept">Aceptar</string>
    <string name="button_telephone_number_send">Enviar</string>
    <string name="edit_telephone_number">Número de telefono</string>
    <string name="etiq_telephone_number">Ingrese un número de telefono</string>
    <string name="etiq_login_wrong_email">Ingrese un email valido</string>
    <string name="etiq_login_wrong_pass">Ingrese una contraseña de 8 caracteres o más</string>
    <string name="etiq_login_empty">Complete todos los campos</string>
    <string name="etiq_main_menu">Entraste al menú principal vieja :D</string>
    <string name="etiq_steps">Cantidad de Pasos</string>
    <string name="etiq_distance">Distancia</string>
    <string name="etiq_speed">Velocidad</string>
    <string name="etiq_advice">Consejos</string>
    <string name="etiq_active_time">Tiempo Activo</string>
    <string name="button_start_step_counter">Reiniciar</string>
    <string name="button_back_step_counter">Volver</string>
    <string name="button_menu_step_counter">Contador de Pasos</string>
    <string name="button_menu_diagnosis">Diagnostico</string>
    <string name="button_menu_logout">Cerrar Sesión</string>
    <string name="etiq_diag_title">Autodiagnóstico</string>
    <string name="etiq_diag_p1">¿Cuál es tu temperatura actual?</string>
    <string name="etiq_diag_p1_r1">Menor a 38º</string>
    <string name="etiq_diag_p1_r2">38º o más</string>
    <string name="etiq_diag_p2">¿Percibiste una pérdida del olfato o del gusto?</string>
    <string name="etiq_diag_p2_r1">No</string>
    <string name="etiq_diag_p2_r2">Sí</string>
    <string name="etiq_diag_p3">¿Tenés tos o dolor de garganta?</string>
    <string name="etiq_diag_p3_r1">No</string>
    <string name="etiq_diag_p3_r2">Sí</string>
    <string name="etiq_diag_p4">¿Tenés dificultad respiratoria?</string>
    <string name="etiq_diag_p4_r1">No</string>
    <string name="etiq_diag_p4_r2">Sí</string>
    <string name="etiq_diag_p5">¿Tenés dolor de cabeza o muscular?</string>
    <string name="etiq_diag_p5_r1">No</string>
    <string name="etiq_diag_p5_r2">Sí</string>
    <string name="etiq_diag_p6">¿Tenés diarrea o vómitos?</string>
    <string name="etiq_diag_p6_r1">No</string>
    <string name="etiq_diag_p6_r2">Sí</string>
    <string name="etiq_diag_p7">Selecciona las opciones correspondientes:</string>
    <string name="etiq_diag_p7_c1">Tengo alguna enfermedad respiratoria</string>
    <string name="etiq_diag_p7_c2">Tengo alguna enfermedad cardiológica</string>
    <string name="etiq_diag_p7_c3">Tengo diabetes</string>
    <string name="etiq_diag_p7_c4">Tengo/tuve cáncer</string>
    <string name="etiq_diag_p7_c5">Tengo alguna condición que baja las defensas</string>
    <string name="etiq_hosp_nom">Nombre</string>
    <string name="etiq_hosp_add">Direccion</string>
    <string name="etiq_hosp_tel">Telefono</string>
    <string name="etiq_hosp_cor">Distancia</string>
    <string name="etiq_hosp_data">Estos son los datos del hospital más cecano:</string>


</resources>