<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiagnosisActivity">

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_title"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="155dp"
      android:layout_height="46dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="45dp"
      android:text="@string/etiq_diag_p1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="178dp"
      android:layout_height="42dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_p5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView14" />

  <TextView
      android:id="@+id/textView20"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="24dp"
      android:text="@string/etiq_diag_p7"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView16" />

  <CheckBox
      android:id="@+id/checkBox3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/etiq_diag_p7_c3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

  <CheckBox
      android:id="@+id/checkBox5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/etiq_diag_p7_c5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

  <CheckBox
      android:id="@+id/checkBox2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/etiq_diag_p7_c2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/checkBox" />

  <CheckBox
      android:id="@+id/checkBox"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="8dp"
      android:text="@string/etiq_diag_p7_c1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView20" />

  <TextView
      android:id="@+id/textView16"
      android:layout_width="178dp"
      android:layout_height="18dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="20dp"
      android:text="@string/etiq_diag_p6"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView15" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="176dp"
      android:layout_height="49dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_p3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView12" />

  <TextView
      android:id="@+id/textView14"
      android:layout_width="179dp"
      android:layout_height="44dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_p4"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView13" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="180dp"
      android:layout_height="57dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_p2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <RadioButton
      android:id="@+id/radioButton2"
      android:layout_width="103dp"
      android:layout_height="46dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="45dp"
      android:text="@string/etiq_diag_p1_r1"
      app:layout_constraintStart_toEndOf="@+id/textView11"
      app:layout_constraintTop_toTopOf="parent" />

  <RadioButton
      android:id="@+id/radioButton_p2_r1"
      style="@style/diag_radio_button2"
      android:layout_width="73dp"
      android:layout_height="56dp"
      android:layout_marginStart="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_p2_r1"
      app:layout_constraintStart_toEndOf="@+id/textView12"
      app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

  <RadioButton
      android:id="@+id/radioButton10"
      style="@style/diag_radio_button2"
      android:layout_width="62dp"
      android:layout_height="49dp"
      android:layout_marginStart="20dp"
      android:layout_marginLeft="20dp"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_p4_r1"
      app:layout_constraintStart_toEndOf="@+id/textView14"
      app:layout_constraintTop_toBottomOf="@+id/radioButton8" />

  <RadioButton
      android:id="@+id/radioButton12"
      style="@style/diag_radio_button2"
      android:layout_width="63dp"
      android:layout_height="40dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/etiq_diag_p5_r1"
      app:layout_constraintEnd_toStartOf="@+id/radioButton13"
      app:layout_constraintHorizontal_bias="0.212"
      app:layout_constraintStart_toEndOf="@+id/textView15"
      app:layout_constraintTop_toBottomOf="@+id/radioButton10" />

  <RadioButton
      android:id="@+id/radioButton14"
      style="@style/diag_radio_button2"
      android:layout_width="61dp"
      android:layout_height="37dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/etiq_diag_p6_r1"
      app:layout_constraintEnd_toStartOf="@+id/radioButton_15"
      app:layout_constraintHorizontal_bias="0.272"
      app:layout_constraintStart_toEndOf="@+id/textView16"
      app:layout_constraintTop_toBottomOf="@+id/radioButton12" />

  <RadioButton
      android:id="@+id/radioButton8"
      style="@style/diag_radio_button2"
      android:layout_width="61dp"
      android:layout_height="48dp"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="16dp"
      android:text="@string/etiq_diag_p3_r1"
      app:layout_constraintStart_toEndOf="@+id/textView13"
      app:layout_constraintTop_toBottomOf="@+id/radioButton_p2_r1" />

  <RadioButton
      android:id="@+id/radioButton4"
      android:layout_width="90dp"
      android:layout_height="46dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="45dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/etiq_diag_p1_r2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/radioButton2"
      app:layout_constraintTop_toTopOf="parent" />

  <RadioButton
      android:id="@+id/radioButton11"
      style="@style/diag_radio_button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/etiq_diag_p4_r2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.517"
      app:layout_constraintStart_toEndOf="@+id/radioButton10"
      app:layout_constraintTop_toBottomOf="@+id/radioButton9" />

  <RadioButton
      android:id="@+id/radioButton5"
      style="@style/diag_radio_button2"
      android:layout_width="55dp"
      android:layout_height="57dp"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/etiq_diag_p2_r2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.428"
      app:layout_constraintStart_toEndOf="@+id/radioButton_p2_r1"
      app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

  <RadioButton
      android:id="@+id/radioButton13"
      style="@style/diag_radio_button2"
      android:layout_width="50dp"
      android:layout_height="40dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="40dp"
      android:layout_marginRight="40dp"
      android:text="@string/etiq_diag_p5_r2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioButton11" />

  <RadioButton
      android:id="@+id/radioButton9"
      style="@style/diag_radio_button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:text="@string/etiq_diag_p3_r2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/radioButton8"
      app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

  <RadioButton
      android:id="@+id/radioButton_15"
      style="@style/diag_radio_button2"
      android:layout_width="51dp"
      android:layout_height="37dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="40dp"
      android:layout_marginRight="40dp"
      android:text="@string/etiq_diag_p6_r2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioButton13" />

</androidx.constraintlayout.widget.ConstraintLayout>