<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HospitalActivity">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="121dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/etiq_hosp_nom"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="84dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/etiq_hosp_add"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/etiq_hosp_tel"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="178dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/etiq_hosp_cor"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="227dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="210dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="212dp"
        android:layout_height="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="210dp"
        android:layout_height="21dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="206dp"
        android:layout_height="21dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        tools:layout_editor_absoluteY="225dp" />
</androidx.constraintlayout.widget.ConstraintLayout>